Смена 22 на 21 java